Sonner toasts fix
+ Fixed sonner toasts not showing in web app
+ Adjust CSS for toasts
+ Added toasts to login operation

--- a/source-code/frontend/src/styles.scss
+++ b/source-code/frontend/src/styles.scss
@@ -7,6 +7,18 @@ body {
   background-color: var(--bs-light);
 }
 
+// Sonner toast styles
+[data-sonner-toast] {
+
+  [data-icon] {
+    margin-right: 0.75rem;
+  }
+
+  [data-content] {
+    width: 100%;
+  }
+}
+
 /* Animate.css */
 @import "animate.css/animate.min.css";
 
